# saarctf-gameserver

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  ci-config.yaml  config.sample.json  config.sample.yaml  config.schema.json  docker-compose.yml  mypy.ini  nginx.default.conf  package.json  pyproject.toml  requirements-dev.txt  requirements-script.txt  requirements.txt  run-mypy.sh  run.sh  telegraf.submitter.conf
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postInstall.sh
checker_runner/: __init__.py  celery_cmd.py  checker_execution.py  demo_checker.py  package_loader.py  runner.py  user_agents.py
checker_runner/runners/: eno.py  factory.py  saarctf.py
ci/: configure_caching.sh  ctf.py  install_dependencies.sh  rabbitmq.conf  test-demo-checker.py  test-flag-submission.sh  test-python-unittest.sh  vpn.sh
controlserver/: app.py  db_filesystem.py  dispatcher.py  events.py  events_impl.py  flag_id_file.py  logger.py  master_timer.py  model_admin.py  models.py  patch_utils.py  service_mgr.py  timer.py  vpncontrol.py  wsgi.py
controlserver/endpoints/: api.py  checker_results.py  ctfroute.py  ctfroute_external.py  flags.py  influx.py  log_messages.py  metrics.py  pages.py  patches.py  services.py  teams.py  utils.py
controlserver/scoring/: algorithm.py  filtered_scoring.py  scoreboard.py  scoreboard_process.py  scoring.py
controlserver/static/: .gitignore
controlserver/templates/: 404.html  admin_layout.html  base.html  checker_results.html  checker_results_view.html  checker_status.html  checker_status_overview.html  flags.html  index.html  log_messages.html  log_messages_view.html  packages.html  pagination.html  patches.html  services.html  teams.html  teams_view.html
controlserver/utils/: import_factory.py
flag-submission-server/: .gitignore  CMakeLists.txt  Dockerfile  README.md  stats.txt
flag-submission-server/benchmark/: benchmark_newflags.cpp  benchmark_oldflags.cpp
flag-submission-server/cmake/: FindLibHiredis.cmake  FindLibev.cmake
flag-submission-server/scripts/: generate_bucket.py  generate_flag.py  submit_new_flags.py
flag-submission-server/src/: config.cpp  config.h  database.cpp  database.h  flagcache.cpp  flagcache.h  flagchecker.cpp  flagchecker.h  main.cpp  periodic.cpp  periodic.h  redis.cpp  redis.h  statistics.cpp  statistics.h  string_pool.cpp  string_pool.h  workerpool.cpp  workerpool.h
flag-submission-server/src/libraries/: base64.c  base64.h
flag-submission-server/src/windows_fixes/: fixes.cpp  hook.hpp
flag-submission-server/tests/: test_main.cpp  testconfig.json  testconfig2.json  testconfig3.json
migrations/: alembic.ini  env.py
migrations/versions/: 057792e3ba77_.py  0e400cc111e2_.py  10a5ee20d0ef_.py  1418f098d06f_.py  1eeeeb5988b0_.py  251d7bd3641c_.py  28250d12516f_.py  2bcc2a3e63ea_.py  2f793eb41f0e_.py  4225a3d6edbd_add_timezone_info.py  4a67c6f412ac_.py  50067ab5c83d_enochecker.py  55a062b550bf_.py  5950403ab77d_add_ports_to_service_table.py  5e6a03306c6e_.py  6417a3f49101_.py  65b6acc8e745_.py  6a3f046884d6_.py  7aab1b106d02_.py  86dd27c83676_.py  922cc6992093_add_wireguard_status_to_teams.py  9676f8be1930_.py  a2e99d5c2195_.py  aea68a3e74a8_.py  b216b27a5b41_.py  b2b35103cfec_.py  b80816ee51bf_.py  bead29c0348f_.py  c2c1a5d3b062_.py  c84ad4bd6649_.py  ca2c4a596673_firstblood_is_now_integer.py  d2f5aba10faa_record_tick_information_in_db.py  d3f46a7baef6_rename_round_to_tick.py  ddd894b2c20c_.py  e50efd6bd399_.py  e94f0d7b3dcc_.py  f022f2589997_.py  f764e8e9fbb1_.py  fd06fc8ae2cb_.py
saarctf_commons/: config.py  db_utils.py  debug_sql_timing.py  logging_utils.py  metric_utils.py  redis.py
sample_files/: Loadtest.md  debug_sql_timing.py  demo_exploit.py  demo_traffic.py  demoservice.php  large_ctf.sql  randomflags.py  simple_exploit_runner.py  small_ctf.sql  submit-random-flags.py  testdata.sql
sample_files/checker_demoservice/: checker_db.py  checker_http.py
sample_files/checker_fnf/: checker.py  test.py
sample_files/checker_ok/: checker.py  test.py
scoreboard/: .browserslistrc  .editorconfig  README.md  angular.json  package-lock.json  package.json  patch-dependencies.sh  proxy.conf.json  tsconfig.app.json  tsconfig.json
scoreboard/src/: .htaccess  darkmode.less  env-dev.less  env-intern.less  env-unredacted.less  index.html  styles.less  variables.less
scripts/: cloud_status_simple.py  export_ctftime_scoreboard.py  export_scoreboard.py  import_eno_services.py  loadtest_service.py  manual_dispatch-collect.py  manual_dispatch.py  patch_prepare.py  patch_publish.py  reconstruct_redis.py  recreate_firstblood.py  recreate_ranking.py  recreate_scoreboard.py  reset_ctf.py  reset_ctf_to_round.py  service_setup_scripts.py  service_update.py  sync_teams.py  sync_teams_http.py  sync_teams_with_sqlite.py  test_dispatchspeed.py  test_insertspeed.py  worker_pool_increase.py  worker_pool_status.py
tests/: __init__.py  bench_scoring.py  test_config.py  test_dispatcher.py  test_gamelib.py  test_scoring.py  test_scripts.py  test_vpnboard.py
tests/utils/: base_cases.py  celery.py  scriptrunner.py
vpn/: .gitignore  README.md  build-openvpn-config-cloud.py  build-openvpn-config-oneperteam.py  build-openvpn-orga-multi.py  build-wireguard-orga-multi.py  iptables.sh  manage-hetzner-firewall.py  manage-iptables.py  manage-trafficstats.py  on-cloud-connect.py  on-cloud-disconnect.py  on-cloud-down.py  on-cloud.sh  on-connect.py  on-connect.sh  on-device-up.sh  on-disconnect.py  on-disconnect.sh  requirements.txt  reset-connection-status.py  useful-commands.txt  vpnctl.py  vpnlib.py
vpn/bpf/: .gitignore  (+9 more)
vpnboard/: __init__.py  records.py  vpn_board.py  vpn_status_daemon.py  vpncelery.py  vpnchecks.py  wg_status.py
wireguard-sync/: .env.example  README.md  pyproject.toml
wireguard-sync/docker/: Dockerfile  README.md  docker-compose.yml
wireguard-sync/wireguard_sync/: __init__.py  __main__.py  exceptions.py  network_lib.py  rest_api.py  settings.py  test-api.json  test_network_lib.py  utils.py
(+93 files in other folders)
